header overflow issue in desktop

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a {
 .header {
   position: relative;
   padding-bottom: 85px;
-  overflow-x: hidden;
+
 }
 
 .header::before {
